@@ -316,10 +316,10 @@ FILE(GLOB man1 ${CMAKE_SOURCE_DIR}/doc/*.1)
 FILE(GLOB man3 ${CMAKE_SOURCE_DIR}/doc/*.3)
 
 IF(PCRE_BUILD_PCRECPP)
-        INSTALL(TARGETS pcrecpp
-                RUNTIME DESTINATION bin
-                LIBRARY DESTINATION lib
-                ARCHIVE DESTINATION lib)
+	INSTALL(TARGETS pcrecpp
+	        RUNTIME DESTINATION bin
+	        LIBRARY DESTINATION lib
+	        ARCHIVE DESTINATION lib)
 	INSTALL(FILES ${PCRECPP_HEADERS} DESTINATION include)
 ELSE(PCRE_BUILD_PCRECPP)
 	# Remove pcrecpp.3
