@@ -29,9 +29,9 @@
 //
 // Author: Sanjay Ghemawat
 
-#ifdef HAVE_CONFIG_H                         
+#ifdef HAVE_CONFIG_H
 #include <config.h>
-#endif                                                               
+#endif
 
 #include <vector>
 #include <assert.h>
