@@ -42,9 +42,9 @@ POSSIBILITY OF SUCH DAMAGE.
 strings. */
 
 
-#ifdef HAVE_CONFIG_H                         
+#ifdef HAVE_CONFIG_H
 #include <config.h>
-#endif                                                               
+#endif
 
 #include "pcre_internal.h"
 
